--- a/BootstrapGen/BootstrapGen.csproj
+++ b/BootstrapGen/BootstrapGen.csproj
@@ -4,7 +4,7 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+        <Nullable>disable</Nullable>
         <RootNamespace>CarbonCompatLoader.Bootstrap.Gen</RootNamespace>
     </PropertyGroup>
 
@@ -17,6 +17,10 @@
       <PackageReference Include="Mono.Cecil" Version="0.11.5" />
       <PackageReference Include="Mono.Options" Version="6.12.0.148" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="build\" />
     </ItemGroup>
 
 </Project>
