--- a/BootstrapGen/BootstrapGen.csproj
+++ b/BootstrapGen/BootstrapGen.csproj
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>disable</Nullable>
         <RootNamespace>CarbonCompatLoader.Bootstrap.Gen</RootNamespace>
+        <LangVersion>11</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -17,10 +18,6 @@
       <PackageReference Include="Mono.Cecil" Version="0.11.5" />
       <PackageReference Include="Mono.Options" Version="6.12.0.148" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="build\" />
     </ItemGroup>
 
 </Project>
