--- a/CarbonCompatLoader/CarbonCompatLoader.csproj
+++ b/CarbonCompatLoader/CarbonCompatLoader.csproj
@@ -23,6 +23,7 @@
         <DefineConstants>DEBUG;TRACE</DefineConstants>
         <ErrorReport>prompt</ErrorReport>
         <WarningLevel>4</WarningLevel>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,6 +33,7 @@
         <DefineConstants>TRACE</DefineConstants>
         <ErrorReport>prompt</ErrorReport>
         <WarningLevel>4</WarningLevel>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
     <ItemGroup>
         <Compile Include="CodeGen\CodeGenTemplate.cs" />
@@ -45,7 +47,9 @@
         <Compile Include="Logger.cs" />
         <Compile Include="MainConverter.cs" />
         <Compile Include="Patches\AssemblyVersionPatch.cs" />
+        <Compile Include="Patches\CodeGenHelpers.cs" />
         <Compile Include="Patches\Harmony\HarmonyBlacklist.cs" />
+        <Compile Include="Patches\Harmony\HarmonyEntrypoint.cs" />
         <Compile Include="Patches\Harmony\HarmonyILSwitch.cs" />
         <Compile Include="Patches\Harmony\BaseHarmonyPatch.cs" />
         <Compile Include="Patches\Harmony\HarmonyTypeRef.cs" />
@@ -67,6 +71,9 @@
       </Reference>
       <Reference Include="AsmResolver, Version=5.3.0.0, Culture=neutral, processorArchitecture=MSIL">
         <HintPath>..\packages\AsmResolver.5.3.0\lib\netstandard2.0\AsmResolver.dll</HintPath>
+      </Reference>
+      <Reference Include="AsmResolver.DotNet">
+        <HintPath>..\packages\AsmResolver.DotNet.5.3.0\lib\netstandard2.0\AsmResolver.DotNet.dll</HintPath>
       </Reference>
       <Reference Include="AsmResolver.DotNet, Version=5.3.0.0, Culture=neutral, processorArchitecture=MSIL">
         <HintPath>..\packages\AsmResolver.DotNet.5.3.0\lib\netstandard2.0\AsmResolver.DotNet.dll</HintPath>
