--- a/Bootstrap/App.config
+++ b/Bootstrap/App.config
@@ -9,6 +9,22 @@
         <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.4.1" newVersion="4.0.4.1" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Mono.Cecil" publicKeyToken="50cebf1cceb9d05e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.11.5.0" newVersion="0.11.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Mono.Cecil.Mdb" publicKeyToken="50cebf1cceb9d05e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.11.5.0" newVersion="0.11.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Mono.Cecil.Pdb" publicKeyToken="50cebf1cceb9d05e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.11.5.0" newVersion="0.11.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Mono.Cecil.Rocks" publicKeyToken="50cebf1cceb9d05e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.11.5.0" newVersion="0.11.5.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
