--- a/CarbonCompatLoader/CarbonCompatLoader.csproj
+++ b/CarbonCompatLoader/CarbonCompatLoader.csproj
@@ -59,6 +59,7 @@
         <Compile Include="Patches\Oxide\BaseOxidePatch.cs" />
         <Compile Include="Patches\Oxide\OxideEntrypoint.cs" />
         <Compile Include="Patches\Oxide\OxideILSwitch.cs" />
+        <Compile Include="Patches\Oxide\OxidePluginAttr.cs" />
         <Compile Include="Patches\Oxide\OxideTypeRef.cs" />
         <Compile Include="PluginReferenceHandler.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
