--- a/CarbonCompatLoader/CarbonCompatLoader.csproj
+++ b/CarbonCompatLoader/CarbonCompatLoader.csproj
@@ -9,12 +9,14 @@
         <AssemblyName>CarbonCompatibilityLoader</AssemblyName>
         <DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
         <NoStdLib>true</NoStdLib>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="AsmResolver" Version="5.3.0" />
         <PackageReference Include="AsmResolver.DotNet" Version="5.3.0" />
         <PackageReference Include="AsmResolver.PE" Version="5.3.0" />
         <PackageReference Include="AsmResolver.PE.File" Version="5.3.0" />
+        <PackageReference Include="JetBrains.Refasmer" Version="1.0.33" />
     </ItemGroup>
     <ItemGroup>
       <Compile Remove="Converters\PluginConverter.cs" />
