--- a/CarbonCompatLoader/packages.config
+++ b/CarbonCompatLoader/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="JetBrains.Refasmer" version="1.0.33" targetFramework="net48" />
   <package id="AsmResolver" version="5.3.0" targetFramework="net48" />
   <package id="AsmResolver.DotNet" version="5.3.0" targetFramework="net48" />
   <package id="AsmResolver.PE" version="5.3.0" targetFramework="net48" />
