--- a/CarbonCompatLoader/CarbonCompatLoader.csproj
+++ b/CarbonCompatLoader/CarbonCompatLoader.csproj
@@ -10,12 +10,13 @@
         <DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
         <NoStdLib>true</NoStdLib>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <Deterministic>true</Deterministic>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="AsmResolver" Version="5.3.0" />
-        <PackageReference Include="AsmResolver.DotNet" Version="5.3.0" />
-        <PackageReference Include="AsmResolver.PE" Version="5.3.0" />
-        <PackageReference Include="AsmResolver.PE.File" Version="5.3.0" />
+        <PackageReference Include="AsmResolver" Version="5.4.0" />
+        <PackageReference Include="AsmResolver.DotNet" Version="5.4.0" />
+        <PackageReference Include="AsmResolver.PE" Version="5.4.0" />
+        <PackageReference Include="AsmResolver.PE.File" Version="5.4.0" />
         <PackageReference Include="JetBrains.Refasmer" Version="1.0.33" />
     </ItemGroup>
     <ItemGroup>
