--- a/BootstrapGen/BootstrapGen.csproj
+++ b/BootstrapGen/BootstrapGen.csproj
@@ -7,6 +7,7 @@
         <Nullable>disable</Nullable>
         <RootNamespace>CarbonCompatLoader.Bootstrap.Gen</RootNamespace>
         <LangVersion>11</LangVersion>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
     <ItemGroup>
@@ -14,6 +15,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="JetBrains.Refasmer" Version="1.0.33" />
+      <PackageReference Include="K4os.Compression.LZ4" Version="1.3.6" />
+      <PackageReference Include="K4os.Compression.LZ4.Streams" Version="1.3.6" />
       <PackageReference Include="Mono.Cecil" Version="0.11.5" />
       <PackageReference Include="Mono.Options" Version="6.12.0.148" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
