--- a/CarbonCompatLoader/CarbonCompatLoader.csproj
+++ b/CarbonCompatLoader/CarbonCompatLoader.csproj
@@ -18,9 +18,17 @@
         <PackageReference Include="AsmResolver.PE" Version="5.4.0" />
         <PackageReference Include="AsmResolver.PE.File" Version="5.4.0" />
         <PackageReference Include="JetBrains.Refasmer" Version="1.0.33" />
+        <PackageReference Include="Microsoft.ILVerification" Version="8.0.0-preview.7.23375.6" />
     </ItemGroup>
     <ItemGroup>
       <Compile Remove="Converters\PluginConverter.cs" />
+    </ItemGroup>
+    <ItemGroup>
+      <EmbeddedResource Include="ExternalRefs\*" />
+      <None Remove="ExternalRefs\*" />
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="ExternalRefs\" />
     </ItemGroup>
     <!--<Target Name="AfterBuild">
         <Copy SourceFiles="$(SolutionDir)CarbonCompatLoader\bin\$(Configuration)\$(TargetFramework)\CarbonCompatibilityLoader.dll" DestinationFolder="C:\rustserver\carbon\extensions" />
